--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,27 @@ spring:
   application:
     name: mulaerp-backend
   
+  # Database Configuration
+  datasource:
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/mulaerp}
+    username: ${DATABASE_USERNAME:mulaerp}
+    password: ${DATABASE_PASSWORD:mulaerp}
+    driver-class-name: ${DATABASE_DRIVER:org.postgresql.Driver}
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 5
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
+  
+  # Flyway Configuration
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    validate-on-migrate: true
+  
+  # Redis/Valkey Configuration
   data:
     redis:
       enabled: ${REDIS_ENABLED:true}
@@ -15,25 +36,51 @@ spring:
       connect-timeout: 5000ms
       lettuce:
         pool:
-          max-active: 8
-          max-idle: 8
-          min-idle: 0
+          max-active: 20
+          max-idle: 10
+          min-idle: 2
           max-wait: -1ms
         shutdown-timeout: 100ms
+  
+  # Cache Configuration
+  cache:
+    type: redis
+    redis:
+      time-to-live: 600000 # 10 minutes
+      cache-null-values: false
+    cache-names:
+      - employees
+      - boms
+      - workorders
+      - purchaseorders
+      - suppliers
+      - accounts
+      - transactions
+      - leads
+      - opportunities
     
   security:
     user:
       name: admin
       password: admin
 
+  # JSON Configuration
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
+    deserialization:
+      fail-on-unknown-properties: false
+
 management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics
+        include: health,info,metrics,flyway,caches
   endpoint:
     health:
       show-details: always
+    caches:
+      enabled: true
 
 jwt:
   secret: ${JWT_SECRET:your-super-secret-jwt-key-change-in-production-min-32-chars}
@@ -44,12 +91,18 @@ encryption:
 cas:
   base:
     url: ${CAS_BASE_URL:https://app.penril.net/pineapple-backend}
+  admin:
+    token: ${CAS_ADMIN_TOKEN:your-cas-admin-token}
 
 logging:
   level:
     com.mulaerp: DEBUG
-    org.springframework.security: DEBUG
-    org.springframework.data.redis: DEBUG
-    org.springframework.boot.autoconfigure.data.redis: DEBUG
+    org.springframework.security: INFO
+    org.springframework.data.redis: INFO
+    org.springframework.cache: DEBUG
+    org.flywaydb: INFO
   file:
     name: /app/logs/mulaerp.log
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+    console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
